# xStatisticsCW

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: release.yml
api/: Cargo.toml
api/src/: client.rs  errors.rs  lib.rs  models.rs
backend/: Cargo.toml
backend/src/: errors.rs  journal.rs  lib.rs  models.rs  report.rs  solver.rs
frontend/: Cargo.toml
frontend/src/: config.rs  context.rs  errors.rs  logs.rs  main.rs  ui.rs
frontend/src/ui/: creator.rs  errors.rs  modals.rs  pages.rs  workspace.rs
frontend/src/ui/modals/: error.rs
frontend/src/ui/pages/: info.rs  main.rs  settings.rs
