[workspace]
resolver = "2"

members = ["frontend"]

[profile.release]
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"

[workspace.lints.clippy]
collapsible_if = "warn"
collapsible_else_if = "warn"
collapsible_match = "warn"
collapsible_str_replace = "warn"
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
unwrap_used = "deny"

[workspace.lints.rust]
unused_doc_comments = "allow"
unsafe_code = "deny"
