[package]
name = "api"
version = "0.0.1"
authors = ["Oleksandr Kovalov <oleksandr.kovalov.work@gmail.com>"]

edition = "2024"
rust-version = "1.95"

categories = ["mathematics"]

readme = "../README.md"
license = "MIT"
repository = "https://github.com/xairaven/xStatisticsCW"

[lints]
workspace = true

[dependencies]
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"