[package]
name = "api"
version = "0.0.1"
authors = ["Oleksandr Kovalov <oleksandr.kovalov.work@gmail.com>"]

edition = "2024"
rust-version = "1.95"

categories = ["mathematics"]

readme = "../README.md"
license = "MIT"
repository = "https://github.com/xairaven/xStatisticsCW"

[lints]
workspace = true

[dependencies]
rand = "0.10.1"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls", "query"]}
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"