[package]
name = "backend"
version = "0.0.1"
authors = ["Oleksandr Kovalov <oleksandr.kovalov.work@gmail.com>"]

edition = "2024"
rust-version = "1.95"

categories = ["mathematics"]

readme = "../README.md"
license = "MIT"
repository = "https://github.com/xairaven/xStatisticsCW"

[lints]
workspace = true

[dependencies]
