[package]
name = "backend"
version = "0.1.0"
authors = ["Oleksandr Kovalov <oleksandr.kovalov.work@gmail.com>"]

edition = "2024"
rust-version = "1.95"

categories = ["mathematics"]

readme = "../README.md"
license = "MIT"
repository = "https://github.com/xairaven/xStatisticsCW"

[lints]
workspace = true

[dependencies]
api = { path = "../api" }

crossbeam = "0.8.4"
log = "0.4.29"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
