[package]
name = "frontend"
version = "0.0.1"
authors = ["Oleksandr Kovalov <oleksandr.kovalov.work@gmail.com>"]

edition = "2024"
rust-version = "1.95"

categories = ["mathematics"]

readme = "../README.md"
license = "MIT"
repository = "https://github.com/xairaven/xStatisticsCW"

[lints]
workspace = true

[dependencies]
backend = { path = "../backend" }

chrono = "0.4.44"
crossbeam = "0.8.4"
egui = "0.34.1"
egui-phosphor = "0.12.0"
eframe = { version = "0.34.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
fern = "0.7.1"
log = "0.4.29"
o2o = "0.5.4"
opener = "0.8.4"
rand = "0.10.1"
rfd = "0.17.2"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
